kubernetes/apps/security/authentik/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: authentik.png
    gethomepage.dev/name: Authentik
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/app: authentik
    gethomepage.dev/description: OIDC User Management
    gethomepage.dev/widget.type: authentik
    hajimari.io/icon: simple-icons:authentik
spec:
  hostnames:
    - sso.${SECRET_DOMAIN}
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
